// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Members: (member) should compile a signature members' 1`] = `
"### signatureMember

▸ **signatureMember**(): \`void\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile declaration member with named anchors' 1`] = `
"### <a id=\\"declarationmember\\" name=\\"declarationmember\\"></a> declarationMember

• **declarationMember**: \`string\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile declaration members' 1`] = `
"### declarationMember

• **declarationMember**: \`string\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile members with getter' 1`] = `
"### getter

• \`get\` **getter**(): \`string\`

[partial: member.sources]

___
"
`;

exports[`Members: (member) should compile members with setter' 1`] = `
"### setter

• \`set\` **setter**(\`value\`): \`void\`

#### Parameters

| Name | Type |
| :------ | :------ |
| \`value\` | \`string\` |

[partial: member.sources]

___
"
`;

exports[`Members: (members) should compile class members' 1`] = `
"## Constructors

[partial: member]

## Properties

[partial: member]

## Accessors

[partial: member]

[partial: member]
"
`;

exports[`Members: (members) should compile module members' 1`] = `
"
"
`;
